<resources>

    <string name="txt_iv">ImageView</string>
    <string name="txt_log_in">Log In</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_email">Email</string>
    <string name="txt_input_email">Please enter your email..</string>
    <string name="txt_name">Name</string>
    <string name="txt_input_name">Please enter your name...</string>
    <string name="txt_password">Password</string>
    <string name="txt_input_password">Please enter your password...</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_input_confirm_password">Please confirm your password...</string>
    <string name="txt_register">Register</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_hello_sarah">Hello, Sarah!</string>
    <string name="txt_title">Title</string>
    <string name="txt_location">Location</string>
    <string name="txt_date">Date</string>
    <string name="txt_let_s_spread_the_light">Let\'s spread the Light</string>
    <string name="txt_popular">Popular</string>
    <string name="txt_near_by">Near By</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_detail">Detail</string>
    <string name="txt_lectures">Lectures</string>
    <string name="txt_error">Not Empty</string>
    <string name="txt_pass_mismatch">Password Miss match</string>
    <string name="txt_users">Users</string>
    <string name="txt_login">Login</string>
    <string name="txt_search_hint">search for letures..</string>
    <string name="txt_no_notification_yet">No Notification yet</string>
    <string name="txt_notifications">Notifications</string>
    <string name="txt_new_post">New Post</string>
    <string name="txt_caption">Write your caption</string>
    <string name="txt_hint_new_post">Write here...</string>
    <string name="txt_likes">Likes</string>
    <string name="txt_date_dummy">Sabtu, 15 Januari 2022</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_user">User\'s Name</string>
    <string name="txt_my_lectures">My lectures</string>
    <string name="txt_new_lectures">New Lecture</string>
    <string name="txt_fill_title">fill in your title..</string>
    <string name="txt_lecturer">Lecturer</string>
    <string name="txt_type">Type</string>
    <string name="txt_form_link">Form link</string>
    <string name="txt_group_link">Group Link</string>
    <string name="txt_fill_in_the_box">Fill in the box..</string>
    <string name="tv_contact_person">Contact Person</string>
    <string name="txt_address">Address</string>
    <string name="txt_description">Description</string>
    <string name="txt_join_group">Join Group</string>
    <string name="txt_register_now">Register Now</string>
    <string name="txt_quota">Quota</string>
    <string name="txt_discard">Discard</string>
    <string name="txt_siroh">Siroh</string>
    <string name="txt_offline">Offline</string>
    <string name="txt_time">Time</string>
    <string name="txt_contact">Contact Person</string>
    <string name="txt_post_now">Post Now</string>
    <string name="txt_abu_ya_la_hizbul_majid_lc">Abu Ya’la Hizbul Majid, Lc</string>
    <string name="txt__20_100">20/100</string>
    <string name="txt_more_detail">More Detail:</string>
    <string name="txt_dump_address">Jl.CHRYSAN VI, MRC, JAKAMULYA.BEKASI SELATAN</string>
    <string name="txt_saturday_15_januari_2022">Saturday, 15 Januari 2022</string>
    <string name="txt_ba_da_maghrib_selesai">Ba’da Maghrib - Selesai</string>
    <string name="txt__0811_108_0690_0911_951_2828">0811- 108-0690 | 0911-951-2828</string>
    <string name="txt_button">button</string>
    <string name="txt_image">Image</string>
</resources>