<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLectureItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:padding="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_20dp"
        app:cardElevation="@dimen/_10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10dp">

            <TextView
                android:id="@+id/tvTitleLectureCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:maxLines="1"
                android:text="@string/txt_title"
                android:textColor="@color/secondary_color"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLecturerNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_2dp"
                android:maxWidth="@dimen/_240dp"
                android:maxLines="1"
                android:text="@string/txt_name"
                android:textColor="@color/main_color"
                android:textSize="@dimen/_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleLectureCard" />

            <ImageView
                android:id="@+id/ivLocationCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2dp"
                android:contentDescription="@string/txt_iv"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="@+id/tvLocationCard"
                app:layout_constraintEnd_toStartOf="@+id/tvLocationCard"
                app:layout_constraintTop_toTopOf="@+id/tvLocationCard" />

            <TextView
                android:id="@+id/tvLocationCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:gravity="center_vertical"
                android:maxWidth="@dimen/_100dp"
                android:maxLines="2"
                android:text="@string/txt_location"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_18sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvDateCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvDateCard" />

            <TextView
                android:id="@+id/tvDateCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:maxWidth="@dimen/_120dp"
                android:maxLines="2"
                android:text="@string/txt_date"
                android:textSize="@dimen/_18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvLecturerNameCard"
                app:layout_constraintTop_toBottomOf="@+id/tvLecturerNameCard" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>