<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LandingScreen">

    <ImageView
        android:id="@+id/icRd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/txt_iv"
        android:src="@drawable/ic_dakwah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBackgroundLanding"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txt_iv"
        android:src="@drawable/ic_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegisterLanding"
        android:layout_width="@dimen/_185dp"
        android:layout_height="@dimen/_60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_color"
        android:text="@string/txt_register"
        android:textSize="@dimen/_20dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginLanding"
        app:layout_constraintEnd_toEndOf="@+id/btnLoginLanding"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLoginLanding" />

    <Button
        android:id="@+id/btnLoginLanding"
        android:layout_width="@dimen/_185dp"
        android:layout_height="@dimen/_60dp"
        android:layout_marginBottom="70dp"
        android:textSize="@dimen/_20dp"
        android:background="@drawable/button_color"
        android:text="@string/txt_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>